--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Lucknow</h2>
+                <h2>Vizag</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Delhi</h2>
+                <h2>Hyderabad</h2>
             </div>
         </div>
     </div>
